# daxia

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build_unixmakefiles_no_orm.sh  build_unixmakefiles_orm_mysql.sh  build_unixmakefiles_orm_sqlite.sh  build_vs2013.bat  build_vs2013_no_orm_mt.bat  build_vs2013_orm_mysql.bat  build_vs2013_orm_mysql_mt.bat  build_vs2013_orm_sqlite.bat  build_vs2013_orm_sqlite_mt.bat  config.bat  config.sh  daxiaConfig.cmake.in  defer.hpp  singleton.hpp  string.hpp
coroutine/: CMakeLists.txt  co_methods.cpp  co_methods.h  coroutine.cpp  coroutine.h  coroutine_scheduler.cpp  coroutine_scheduler.h
database/: CMakeLists.txt  FindMySQL.cmake  data_type.h  mysql_command.cpp  mysql_command.h  orm.cpp  orm.h  sqlite_command.cpp  sqlite_command.h  sqlserver_command.cpp  sqlserver_command.h
database/driver/: CMakeLists.txt  basic_driver.cpp  basic_driver.h  basic_recordset.h  data_type.h  data_type.hpp  mysql_driver.cpp  mysql_driver.h  mysql_recordset.cpp  mysql_recordset.h  sqlite_driver.cpp  sqlite_driver.h  sqlite_recordset.cpp  sqlite_recordset.h
database/driver/mysql/: readme.txt
database/driver/sqlserver/: CMakeLists.txt
dxg/: CMakeLists.txt  client.cpp  client.h  controller.cpp  controller.h  router.cpp  router.h  scheduler.cpp  scheduler.h  server.cpp  server.h  session.cpp  session.h  sessions_manager.cpp  sessions_manager.h
dxg/client/: dxg.hpp
dxg/common/: basic_session.cpp  basic_session.h  basic_session.hpp  define.h  define.hpp  http_parser.cpp  http_parser.h  parser.cpp  parser.h  parser.hpp  shared_buffer.cpp  shared_buffer.h  shared_buffer.hpp
dxg/server/: client.hpp  client_manager.hpp  controller.hpp  dxg.hpp  router.hpp  scheduler.hpp  session.hpp
encode/: CMakeLists.txt  base64.cpp  base64.h  hash.hpp  hex.cpp  hex.h  json.cpp  json.h  json.hpp  md5.cpp  md5.h  sha1.cpp  sha1.h  strconv.cpp  strconv.h  strconv.hpp  url.cpp  url.h  uuid.cpp  uuid.h  zlib.cpp  zlib.h  zlib_wrap.cpp  zlib_wrap.h
encode/zlib/: CMakeLists.txt
include/: daxia.h
net/: CMakeLists.txt  FindOpenSSL.cmake  client.cpp  client.h  controller.cpp  controller.h  http_client.cpp  http_client.h  router.cpp  router.h  scheduler.cpp  scheduler.h  server.cpp  server.h  session.cpp  session.h  sessions_manager.cpp  sessions_manager.h
net/common/: CMakeLists.txt  basic_session.cpp  basic_session.h  buffer.cpp  buffer.h  byte_order.hpp  define.h  http_parser.cpp  http_parser.h  parser.cpp  parser.h  shared_buffer.cpp  shared_buffer.h  websocket_parser.cpp  websocket_parser.h
reflect/: CMakeLists.txt  reflect.hpp  reflect_base.cpp  reflect_base.h  reflect_base.hpp
system/: CMakeLists.txt  coroutine.h  datetime.cpp  datetime.h  file.h  find_file.h
system/coroutine/: CMakeLists.txt  co_methods.h  coroutine.cpp  coroutine.h  coroutine_scheduler.cpp  coroutine_scheduler.h
system/linux/: CMakeLists.txt  co_methods.cpp  co_methods.h  co_scheduler.cpp  co_scheduler.h  coroutine.cpp  coroutine.h  file.cpp  file.h  find_file.cpp  find_file.h  this_coroutine.cpp  this_coroutine.h
system/threadpool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
system/windows/: CMakeLists.txt  access_token.cpp  access_token.h  co_methods.cpp  co_methods.h  co_scheduler.cpp  co_scheduler.h  coroutine.cpp  coroutine.h  file.cpp  file.h  file_manager.h  find_file.cpp  find_file.h  find_process.cpp  find_process.h  find_window.cpp  find_window.h  path.cpp  path.h  process.cpp  process.h  processes_manager.cpp  processes_manager.h  this_coroutine.cpp  this_coroutine.h  window.cpp  window.h
vs2013/: daxia.sln  daxia.vcxproj  daxia.vcxproj.filters
win32/: CMakeLists.txt  access_token.cpp  access_token.h  path.cpp  path.h  process.cpp  process.h  processes_manager.cpp  processes_manager.h
